--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,7 @@ body, html{
   margin: 0%;
 }
 
-body, .dropzone{
+body, .dropzone, .link{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,3 +127,12 @@ h1 em {
   margin-left: -50px;
   background-color: #00164c;
 } 
+
+.link {
+  justify-content: center;
+  color: #5685ea;
+  text-decoration: none;
+  -webkit-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+}
