--- a/sendemail/public/styles.css
+++ b/sendemail/public/styles.css
@@ -24,3 +24,153 @@ button {
     border: none;
     cursor: pointer;
 }
+:root{
+    --main-bg-color: #eff5fe;
+    --border-color: #0288d147;
+    --primary: #4E60FF;
+    --primary-light: #F3F4FF;
+    --white: #fff;
+    --dark: #2B2B43;
+    --grey: #83859C;
+    --grey-light: #C7C8D2;
+    --grey-lightest: #EDEEF2;
+    --error: #FF5C60;
+  
+    --breakpoint-mobile: 768px;
+    --breakpoint-desktop: 1110px;
+  }
+  
+  body, html{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: var(--main-bg-color);
+    height: 100%;
+    padding: 0;
+    margin: 0%;
+  }
+  
+  body, .dropzone, .link, .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .upload-container{
+    background: #ffffff;
+    border-radius: 25px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .container{
+    background: #ffffff;
+    border-radius: 55px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  }
+  
+  .dropzone, .container{
+    width: 500px;
+    min-height: 200px;
+  
+    margin: 30px;
+    border-radius: 10px;
+    transition: all 0.2ms ease-in-out;
+  }
+  
+  .icon-container{
+    width: 75px;
+    height: 100px;
+    position: relative;
+  }
+  
+  .icon-container img{
+    width: 75px;
+    position: absolute;
+    transition: 250ms ease-in-out;
+  }
+  
+  #fileInput{
+    display: none;
+  }
+  
+  button {
+    cursor: pointer;
+    font-size: 12px;
+    line-height: 12px;
+    font-family: 'Arial';
+    font-weight: bold;
+    padding: 10px 15px;
+    border-radius: 10px;
+  
+    color: var(--white);
+    background-color: var(--primary);
+    border: none;
+    transition: box-shadow .15s ease-in-out;
+  }
+  
+  .one h1 {
+    text-align: center;
+    text-transform: uppercase;
+    padding-bottom: 5px;
+  }
+  .one h1:before {
+    width: 28px;
+    height: 5px;
+    display: block;
+    content: "";
+    position: absolute;
+    bottom: 3px;
+    left: 50%;
+    margin-left: -14px;
+    background-color: #5685ea;
+  }
+  
+  
+  h1 {
+    position: relative;
+    padding: 0;
+    margin: 0;
+    font-family: "Raleway", sans-serif;
+    font-weight: 300;
+    font-size: 40px;
+    color: #080808;
+    -webkit-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+  }
+  
+  h1 span {
+    display: block;
+    font-size: 0.5em;
+    line-height: 1.3;
+  }
+  h1 em {
+    font-style: normal;
+    font-weight: 600;
+  }
+  .one h1:after {
+    width: 100px;
+    height: 1px;
+    display: block;
+    content: "";
+    position: relative;
+    margin-top: 25px;
+    left: 50%;
+    margin-left: -50px;
+    background-color: #00164c;
+  } 
+  
+  .link {
+    justify-content: center;
+    color: #5685ea;
+    text-decoration: none;
+    -webkit-transition: all 0.4s ease 0s;
+    -o-transition: all 0.4s ease 0s;
+    transition: all 0.4s ease 0s;
+  }
+  
+  input[type="email"] {
+    align-items: center;
+    padding: 10px;
+    margin-right: 10px;
+  }
+  
